Added rectangle for Resourcesand modified icon

--- a/index.html
+++ b/index.html
@@ -142,6 +142,27 @@ Tessera is a powerful computational environment for data large and small. From i
           <div class="panel hook-panel">
             <div class="panel-body">
               <div class="hook-circle">
+                <div class="inside-circle-stopwatch">
+                  <i class="icon-book"></i>
+                </div>
+              </div>
+              <h4>Rescources</h4>
+              <!-- <hr class="big-hr black"> -->
+              <p>
+Please list all the resources here.
+              </p>
+              <p>
+                Once you are up and running, see our
+                <span class="page-scroll"><a href="#resources">Resources for using Tessera
+                <i class="icon-chevron-right more-icon"></i></a></span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel hook-panel">
+            <div class="panel-body">
+              <div class="hook-circle">
                 <div class="inside-circle-group">
                   <i class="icon-group"></i>
                 </div>
