--- a/index.html
+++ b/index.html
@@ -425,6 +425,44 @@ view()
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel quickstart-panel">
+            <div class="panel-body">
+              <h3>Code & User Groups</h3>
+      <!-- <hr class="big-hr black"> -->
+              <p>
+Tessera is open source and source code for its components is 
+<a href="https://github.com/tesseradata">hosted on Github under the tesseradata organization.</a>
+              </p>
+              <p>
+Contributors are welcome!  Feel free to fork any of our component repositories 
+and introduce yourself on the developer's mailing list.
+
+If you have questions or issues, or just want to keep up on what is new, please 
+do not hesitate to join the 
+<a href="https://groups.google.com/forum/#!forum/tessera-users">
+users mailing list.</a>  Simply send an email to 
+<a href="mailto:tessera-users+subscribe@googlegroups.com">
+tessera-users+subscribe@googlegroups.com</a>
+              </p>
+              <p>
+Also, you can join our 
+<a href="https://groups.google.com/forum/#!forum/tessera-dev">
+developer's mailing list</a> by sending email to 
+<a href="mailto:tessera-dev+subscribe@googlegroups.com">
+tessera-dev+subscribe@googlegroups.com</a>
+              </p>
+The result of calling <code>view()</code> should look something like 
+<a href="#">this</a>.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
   
   <div class="gray"><div class="arrow-down arrow-offcolor gray"></div></div>
@@ -537,57 +575,7 @@ BMC Medical Informatics and Decision Making, 2009
           </div>
         </div>
       </div>
-      <div class="row equal">
-        <div class="col-sm-6">
-          <div class="panel hook-panel resource-panel">
-            <div class="panel-body">
-              <div class="hook-circle">
-                <div class="inside-circle-github">
-                  <i class="icon-github"></i>
-                </div>
-              </div>
-              <h4>Code</h4>
-              <!-- <hr class="big-hr black"> -->
-              <p>
-Tessera is open source and source code for its components is 
-<a href="https://github.com/tesseradata">hosted on Github under the tesseradata organization.</a>
-              </p>
-              <p>
-Contributors are welcome!  Feel free to fork any of our component repositories 
-and introduce yourself on the developer's mailing list.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="panel hook-panel resource-panel">
-            <div class="panel-body">
-              <div class="hook-circle">
-                <div class="inside-circle-google">
-                  <i class="icon-google"></i>
-                </div>
-              </div>
-              <h4>User Groups</h4>
-              <!-- <hr class="big-hr black"> -->
-              <p>
-If you have questions or issues, or just want to keep up on what is new, please 
-do not hesitate to join the 
-<a href="https://groups.google.com/forum/#!forum/tessera-users">
-users mailing list.</a>  Simply send an email to 
-<a href="mailto:tessera-users+subscribe@googlegroups.com">
-tessera-users+subscribe@googlegroups.com</a>
-              </p>
-              <p>
-Also, you can join our 
-<a href="https://groups.google.com/forum/#!forum/tessera-dev">
-developer's mailing list</a> by sending email to 
-<a href="mailto:tessera-dev+subscribe@googlegroups.com">
-tessera-dev+subscribe@googlegroups.com</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+
     </div>
   </section>
   
