Added section 'Installation on Clusters' under the INSTALL block which links to Ashrith's page.

--- a/index.html
+++ b/index.html
@@ -331,6 +331,13 @@ Tessera software component running. The Vagrant script and instructions are avai
                 </p>
               </div>
 
+              <h4><i class="icon-cube"></i>Installation on Clusters</h4>
+              <div class="quickstart-text">
+                <p>
+                Please see <a href="./installcluster.html">here</a> for details regarding installation on clusters.
+                </p>
+              </div>
+
               <h4><i class="icon-cloud"></i>Amazon Elastic MapReduce (EMR)</h4>
               <div class="quickstart-text">
                 <p>
