Shifted sections. Inserted FILLER WORDS signal.

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@ Tessera is a powerful computational environment for data large and small. From i
                   <i class="icon-book"></i>
                 </div>
               </div>
-              <h4>Rescources</h4>
+              <h4>(FILLER WORDS)</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
-Please list all the resources here.
+(FILLER WORDS) Please list all the resources here.
               </p>
               <p>
                 Once you are up and running, see our
@@ -202,9 +202,27 @@ The Tessera computational environment is powered by a statistical approach, Divi
       <div class="row featurette">
         <div class="col-md-7">
           <h3 class="featurette-heading">
-            <span class="text-danger">Divide and Recombine (D&amp;R)</span>
+            <span class="text-danger">Divide and Recombine (D&amp;R) Statistical Methods</span>
           </h3>
             <p>
+Tessera is powered by Divide and Recombine. In D&amp;R, we seek meaningful ways to divide the data into subsets, apply statistical methods to each subset independently, and recombine the results of those computations in a statistically valid way.  Sometimes the results are approximations of the exact result had we been able to process the data as a whole, but the potential slight loss in accuracy is a small penalty to pay for the simple, fast computation.  In D&amp;R, the data are parallelized, not the statistical methods.  Thus we have access the existing vast library of methods available in R.  
+<!-- D&amp;R statistics research seeks division and recombination methods to maximize the accuracy of a result and to characterize its statistical variability. -->
+          </p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="images/drdiagram.png" alt="divide and recombine">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+      
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h3 class="featurette-heading">
+            <span class="text-danger">Tessera: The D&amp;R Computational Environment with Hadoop</span>
+          </h3>
+            <p>
+            (FILLER WORDS)
 Tessera is powered by Divide and Recombine. In D&amp;R, we seek meaningful ways to divide the data into subsets, apply statistical methods to each subset independently, and recombine the results of those computations in a statistically valid way.  Sometimes the results are approximations of the exact result had we been able to process the data as a whole, but the potential slight loss in accuracy is a small penalty to pay for the simple, fast computation.  In D&amp;R, the data are parallelized, not the statistical methods.  Thus we have access the existing vast library of methods available in R.  
 <!-- D&amp;R statistics research seeks division and recombination methods to maximize the accuracy of a result and to characterize its statistical variability. -->
           </p>
@@ -438,32 +456,13 @@ view()
         <div class="col-lg-12">
           <div class="panel quickstart-panel">
             <div class="panel-body">
-              <h3>Code & User Groups</h3>
+              <h3>Cluster Installation</h3>
       <!-- <hr class="big-hr black"> -->
               <p>
-Tessera is open source and source code for its components is 
-<a href="https://github.com/tesseradata">hosted on Github under the tesseradata organization.</a>
+              Setting up and installing all the components of the Tessera stack on a bonafide cluster 
+requires more commitment in terms of hardware, installation, configuration, and 
+administration, but we strive to make the procedure as smooth as possible. 
               </p>
-              <p>
-Contributors are welcome!  Feel free to fork any of our component repositories 
-and introduce yourself on the developer's mailing list.
-
-If you have questions or issues, or just want to keep up on what is new, please 
-do not hesitate to join the 
-<a href="https://groups.google.com/forum/#!forum/tessera-users">
-users mailing list.</a>  Simply send an email to 
-<a href="mailto:tessera-users+subscribe@googlegroups.com">
-tessera-users+subscribe@googlegroups.com</a>
-              </p>
-              <p>
-Also, you can join our 
-<a href="https://groups.google.com/forum/#!forum/tessera-dev">
-developer's mailing list</a> by sending email to 
-<a href="mailto:tessera-dev+subscribe@googlegroups.com">
-tessera-dev+subscribe@googlegroups.com</a>
-              </p>
-The result of calling <code>view()</code> should look something like 
-<a href="#">this</a>.
             </div>
           </div>
         </div>
@@ -582,10 +581,97 @@ BMC Medical Informatics and Decision Making, 2009
           </div>
         </div>
       </div>
-
+      <div class="row equal">
+        <div class="col-sm-6">
+          <div class="panel hook-panel resource-panel">
+            <div class="panel-body">
+              <div class="hook-circle">
+                <div class="inside-circle-github">
+                  <i class="icon-github"></i>
+                </div>
+              </div>
+              <h4>Code</h4>
+              <!-- <hr class="big-hr black"> -->
+              <p>
+Tessera is open source and source code for its components is 
+<a href="https://github.com/tesseradata">hosted on Github under the tesseradata organization.</a>
+              </p>
+              <p>
+Contributors are welcome!  Feel free to fork any of our component repositories 
+and introduce yourself on the developer's mailing list.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="panel hook-panel resource-panel">
+            <div class="panel-body">
+              <div class="hook-circle">
+                <div class="inside-circle-google">
+                  <i class="icon-google"></i>
+                </div>
+              </div>
+              <h4>User Groups</h4>
+              <!-- <hr class="big-hr black"> -->
+              <p>
+If you have questions or issues, or just want to keep up on what is new, please 
+do not hesitate to join the 
+<a href="https://groups.google.com/forum/#!forum/tessera-users">
+users mailing list.</a>  Simply send an email to 
+<a href="mailto:tessera-users+subscribe@googlegroups.com">
+tessera-users+subscribe@googlegroups.com</a>
+              </p>
+              <p>
+Also, you can join our 
+<a href="https://groups.google.com/forum/#!forum/tessera-dev">
+developer's mailing list</a> by sending email to 
+<a href="mailto:tessera-dev+subscribe@googlegroups.com">
+tessera-dev+subscribe@googlegroups.com</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+<!--     <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel quickstart-panel">
+            <div class="panel-body">
+              <h3>Code & User Groups</h3>
+              <p>
+Tessera is open source and source code for its components is 
+<a href="https://github.com/tesseradata">hosted on Github under the tesseradata organization.</a>
+              </p>
+              <p>
+Contributors are welcome!  Feel free to fork any of our component repositories 
+and introduce yourself on the developer's mailing list.
+
+If you have questions or issues, or just want to keep up on what is new, please 
+do not hesitate to join the 
+<a href="https://groups.google.com/forum/#!forum/tessera-users">
+users mailing list.</a>  Simply send an email to 
+<a href="mailto:tessera-users+subscribe@googlegroups.com">
+tessera-users+subscribe@googlegroups.com</a>
+              </p>
+              <p>
+Also, you can join our 
+<a href="https://groups.google.com/forum/#!forum/tessera-dev">
+developer's mailing list</a> by sending email to 
+<a href="mailto:tessera-dev+subscribe@googlegroups.com">
+tessera-dev+subscribe@googlegroups.com</a>
+              </p>
+The result of calling <code>view()</code> should look something like 
+<a href="#">this</a>.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
   </section>
-  
+
   <div class="arrow-down arrow-gray"></div>
   
   <section id="aboutus">
