--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Tessera is a powerful computational environment for data large and small. From i
                   <i class="icon-book"></i>
                 </div>
               </div>
-              <h4>(FILLER WORDS)</h4>
+              <h4>(Filler Words)</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
 (FILLER WORDS) Please list all the resources here.
