--- a/index.html
+++ b/index.html
@@ -100,14 +100,17 @@
                   <i class="icon-lightning"></i>
                 </div>
               </div>
-              <h4>The Power of R with Big Data</h4>
+              <h4>The Power of Divide&amp;Recombine and R</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
-With Tessera you can apply the thousands of methods of statistics, machine learning, and visualization implemented in the powerful R language to large data sets - without being an expert in distributed computing. 
+Tessera implements the D&amp;R statistical approach for deep analysis of larger and
+more complex data that leads to very simple parallel computation. You program in
+the elegantly designed, powerful R language, and can apply the 1000s of
+methods of statistics, machine learning, and visualization in R.
 <!-- With Tessera, if you know R, you can analyze big data. -->
               </p>
               <p class="page-scroll">
-                <a href="#components"> More detail on Tessera components 
+                <a href="#components">  Tessera Components 
                 <i class="icon-chevron-right more-icon"></i></a>
               </p>
             </div>
@@ -124,17 +127,23 @@ With Tessera you can apply the thousands of methods of statistics, machine learn
               <h4>Get Started in Minutes</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
-Tessera is a powerful computational environment for data large and small. From installation on a workstation to the Amazon cloud, we've made it easy for you to get started.
+The Tessera back end is a parallel computing environment doing D&amp;R
+computations managed for you by Tessera. From a workstation, to a small cluster,
+to a very high-end cluster, Tessera can greatly increase the size and
+complexity of data you are able to analyze.  Getting started is easy.
               </p>
+
               <p class="page-scroll">
-                <a href="#quickstart">Quickstart guide
+                <a href="#quickstart">Quickstart Guide
                 <i class="icon-chevron-right more-icon"></i></a>
               </p>
+<!--
               <p>
                 Once you are up and running, see our
                 <span class="page-scroll"><a href="#resources">Resources for using Tessera
                 <i class="icon-chevron-right more-icon"></i></a></span>
-              </p>
+             </p>
+-->
             </div>
           </div>
         </div>
@@ -146,14 +155,16 @@ Tessera is a powerful computational environment for data large and small. From i
                   <i class="icon-book"></i>
                 </div>
               </div>
-              <h4>(Filler Words)</h4>
+              <h4>Resources for Learning &amp; Joining</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
-(FILLER WORDS) Please list all the resources here.
+Between the R front end and the parallel computational back end are Tessera R
+packages that make it easy for you to program D&amp;R: datadr, Trelliscope,
+and RHIPE. Our resources help you to learn these and to read about D&amp;R
+statistics, and they invite you to join developer and user groups.
               </p>
               <p>
-                Once you are up and running, see our
-                <span class="page-scroll"><a href="#resources">Resources for using Tessera
+                <span class="page-scroll"><a href="#resources">Resources
                 <i class="icon-chevron-right more-icon"></i></a></span>
               </p>
             </div>
@@ -170,10 +181,13 @@ Tessera is a powerful computational environment for data large and small. From i
               <h4>Built by Data Scientists</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
-The development of Tessera began and continues to be driven by our team's work on deep statistical analysis of large complex data.  Expertise on our team covers all areas of data science, from cluster hardware design for big data to theoretical statistics.
+Development of Tessera began and continues to be driven by our team's work
+on deep statistical analysis of large complex data.  Our expertise covers all
+areas of data science, from cluster hardware design for large
+complex data to theoretical statistics to projects analyzing large complex data.
               </p>
               <p class="page-scroll">
-                <a href="#aboutus">About us
+                <a href="#aboutus">About Us
                 <i class="icon-chevron-right more-icon"></i></a>
               </p>
             </div>
@@ -192,7 +206,9 @@ The development of Tessera began and continues to be driven by our team's work o
           <h2>Tessera Components</h2>
           <hr class="big-hr black">
           <p>
-The Tessera computational environment is powered by a statistical approach, Divide and Recombine. At the front end, the analyst programs in R. At the back end is a distributed parallel computational environment such as Hadoop. In between are three Tessera packages: datadr, Trelliscope, and RHIPE. These packages enable the data scientist to communicate with the back end by simple R commands.
+The Tessera computational environment is powered by the statistical approach
+Divide&amp;Recombine. D&amp;$
+At the front end, the analyst programs in R. At the back end is a distributed parallel computational environment such as Hadoop. In between are three Tessera packages: datadr, Trelliscope, and RHIPE. These packages enable the data scientist to communicate with the back end by simple R commands.
           </p>
         </div>
       </div>
