--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
                   <i class="icon-lightning"></i>
                 </div>
               </div>
-              <h4>The Power of Divide &amp; Recombine and R</h4>
+              <h4>The Power D&amp;R and R</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
-Tessera implements the D&amp;R statistical approach for deep analysis of larger and more complex data that leads to very simple parallel computation. You
+Tessera implements the Divide &amp; Recombine statistical approach for
+deep analysis of larger and more complex data that leads to simple
+parallel computation. You
 program in the elegantly designed, powerful R language front end, and can apply the 1000s of methods of statistics, machine learning, and visualization in R.
 <!-- With Tessera, if you know R, you can analyze big data. -->
               </p>
@@ -153,12 +155,12 @@ size and complexity of data you are able to analyze.  Getting started is easy.
                   <i class="icon-book"></i>
                 </div>
               </div>
-              <h4>Resources for Learning &amp; Joining</h4>
+              <h4>Resources to Learn &amp; Join</h4>
               <!-- <hr class="big-hr black"> -->
               <p>
 Between the R front end and the parallel computational back end are Tessera R
 packages --- datadr, Trelliscope,  &amp; RHIPE --- that make it easy for you to
-program D&amp;R. Our resources help you to learn these and to read about
+program D&amp;R. Our RESOURCES help you to learn these and to read about
 D&amp;R statistics. And they invite you to join developer and user groups.
               </p>
               <p>
@@ -182,7 +184,7 @@ D&amp;R statistics. And they invite you to join developer and user groups.
 Development of Tessera began and continues to be driven by our team's work
 on deep statistical analysis of large complex data.  Our expertise covers all
 areas of data science, from cluster hardware design for large
-complex data to theoretical statistics to our projects analyzing large complex
+complex data to theoretical statistics to our subject matter projects analyzing large complex
 data.
               </p>
               <p class="page-scroll">
@@ -250,7 +252,7 @@ which address D&amp;R statistics.
         <div class="col-md-7">
           <h3 class="featurette-heading">
             <span class="text-danger">
-Tessera with Hadoop at the Back End</span>
+Tessera with the Hadoop Back End</span>
           </h3>
             <p>
 Tessera is powered by D&amp;R.
@@ -258,7 +260,7 @@ R was an obvious choice for a front end. We will stick with R
 until something better comes along. But we have a wide choice for back ends to
 carry out the parallel computation.
 Our first choice, with more options to follow, was Hadoop because it is
-very available from many sources and widely supported. Hadoop distributes
+readily available from many sources and widely supported. Hadoop distributes
 D&amp;R subsets across the nodes (servers) of a cluster, on disk. Those
 nodes do the  D&amp;R parallel computation too. One critical outcome is that
 we can analyze a dataset whose total memory size is greater than the total
@@ -341,16 +343,32 @@ that RHIPE entails progamming at a lower level than datadr.
           </p>
         </div>
         <div class="col-md-5">
-
           <img class="featurette-image img-responsive" src="images/runner.png"
 alt="R and Hadoop Integrated Programming Environment">
  <h1 class="featurette-heading">
             <span class="text-danger"> <font color="black"> RHIPE </font></span>
           </h1>
-          <h1 class="featurette-heading">
-          </h1>
         </div>
       </div>
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h3 class="featurette-heading">
+            <span class="text-danger">
+Other Software in the Tessera Stack</span>
+          </h3>
+            <p>
+(Filler words) Other software in the Tessera Stack include RStudio Server,
+Shiny Server, Protocol Buffer, and Oracle Java.
+          </p>
+        </div>
+        <div class="col-md-5">
+
+          <img class="featurette-image img-responsive"
+src="images/others.png" alt="rhipe">
+        </div>
+      </div>
+
     </div>
   </section>
   
@@ -365,6 +383,29 @@ alt="R and Hadoop Integrated Programming Environment">
           <!-- <p>Brief text about getting started...</p> -->
         </div>
       </div>
+
+<!--
+    <div class="container">
+-->
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel quickstart-panel">
+            <div class="panel-body">
+              <h3>Cluster Installation</h3>
+      <!-- <hr class="big-hr black"> -->
+              <p>
+There a many ways to get started with
+              Setting up and installing all the components of the Tessera stack on a bonafide cluster 
+requires more commitment in terms of hardware, installation, configuration, and 
+administration, but we strive to make the procedure as smooth as possible. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+<!--
+    </div>
+-->
       <div class="row equal">
         <div class="col-sm-6">
           <div class="panel quickstart-panel">
@@ -518,24 +559,6 @@ view()
 </code></pre>
 <!-- The result of calling <code>view()</code> should look something like 
 <a href="#">this</a>. -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="panel quickstart-panel">
-            <div class="panel-body">
-              <h3>Cluster Installation</h3>
-      <!-- <hr class="big-hr black"> -->
-              <p>
-              Setting up and installing all the components of the Tessera stack on a bonafide cluster 
-requires more commitment in terms of hardware, installation, configuration, and 
-administration, but we strive to make the procedure as smooth as possible. 
-              </p>
             </div>
           </div>
         </div>
